# aquarium

./: .gitignore  .gitmodules  Cargo.toml  README.md  build  build.bat
front/: package-lock.json  package.json
front/src/: index.css  index.js
src/: api.rs  cachealloc.rs  main.rs  routes.rs  serialization.rs  state.rs
src/cells/: code.rs  mod.rs  organism.rs  world.rs
src/templates/: index.html
