[package]
name = "aquarium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
heapless = "0.7.8"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
tera = "1.15.0"
num-bigint = "0.4.3"
parking_lot = "0.12.0"
