[package]
name = "aquarium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
heapless = "0.7.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
parking_lot = "0.12.0"
serde-big-array = "0.4.1"
sized-vec = "0.3.0"
actix-web = "4.3.0"
actix-files = "0.6.2"
ctrlc = "3.2.5"
itertools = "0.10.5"
env_logger = "0.10.0"
futures = "0.3.27"
